continue work on moving stuff to monorepo

--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,22 +1,31 @@
 # use the official Bun image
 # see all versions at https://hub.docker.com/r/oven/bun/tags
 FROM oven/bun:slim AS base
-WORKDIR /usr/src/app
+
+FROM base AS builder
+WORKDIR /app
+
+RUN bun install turbo@2 --global
+COPY . .
+RUN turbo prune @teamgalena/bot --docker
 
 # install dependencies into temp directory
 # this will cache them and speed up future builds
 # install with --production (exclude devDependencies)
 FROM base AS install
+
 RUN mkdir -p /temp
-COPY package.json bun.lockb /temp/
-RUN cd /temp && bun install --frozen-lockfile --production
+COPY --from=builder /app/out/json/ /temp/
+RUN cd /temp && bun install --filter bot --frozen-lockfile --production
 
 # copy production dependencies and source code into final image
 FROM base AS release
+WORKDIR /usr/src
+
 COPY --from=install /temp/node_modules node_modules
-COPY src src
+COPY --from=builder /app/out/full/bot/src src
 COPY migrations migrations
 
 # run the app
 EXPOSE 3000/tcp
-ENTRYPOINT [ "bun", "run", "src/app.ts" ]
+ENTRYPOINT [ "bun", "run", "app/src/app.ts" ]
