--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "name": "@teamgalena/api",
   "private": true,
+  "packageManager": "bun@1.2.17",
   "workspaces": [
     "shared",
     "bot",
-    "dashboard"
+    "dashboard",
+    "seeding"
   ]
 }
