--- a/apps/dashboard/Dockerfile
+++ b/apps/dashboard/Dockerfile
@@ -7,26 +7,31 @@ WORKDIR /app
 
 RUN bun install turbo@2 --global
 COPY . .
-RUN turbo prune @teamgalena/bot --docker
+RUN turbo prune @teamgalena/dashboard --docker
 
 # install dependencies into temp directory
 # this will cache them and speed up future builds
 # install with --production (exclude devDependencies)
 FROM base AS install
-
-WORKDIR pruned
+WORKDIR /pruned
 
 COPY --from=builder /app/out/json/ .
 RUN bun install --frozen-lockfile --production
+
+COPY --from=builder /app/out/full .
+RUN bun run --filter @teamgalena/dashboard build
 
 # copy production dependencies and source code into final image
 FROM base AS release
 WORKDIR /app
 
 COPY --from=install /pruned/node_modules node_modules
-COPY --from=builder /app/out/full ./
-COPY migrations migrations
+COPY --from=install /pruned/apps/dashboard/dist dist
+COPY --from=install /pruned/apps/dashboard/public public
 
 # run the app
-EXPOSE 3000/tcp
-ENTRYPOINT [ "bun", "run", "apps/bot/src/app.ts" ]
+ENV HOST=0.0.0.0
+ENV PORT=80
+EXPOSE 80/tcp
+
+CMD ["bun", "run", "dist/server/entry.mjs"]
