--- a/packages/seeding/package.json
+++ b/packages/seeding/package.json
@@ -3,14 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "run": "bun run src/main.ts",
-    "type-check": "tsc",
-    "lint": "eslint"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.28.0",
-    "eslint": "^9.28.0",
-    "typescript-eslint": "^8.33.0"
+    "run": "bun run src/main.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
