--- a/.github/workflows/build-dashboard.yml
+++ b/.github/workflows/build-dashboard.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   push:
     branches: [main]
+  release:
+    types: [created]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
