work on dashboard

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.10"
+    "@types/jsonwebtoken": "^9.0.10",
+    "htmx.org": "^2.0.6"
   }
 }
