--- a/.github/workflows/build-dashboard.yml
+++ b/.github/workflows/build-dashboard.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [main]
   release:
-    types: [created]
+    types: [published]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
